name:                murmurhash3
version:             0.1
synopsis:            32-bit non-cryptographic hashing using MurmurHash3
category:            Data, Digest, Codec
stability:      	   provisional
license:             PublicDomain
license-file:        LICENSE
author:              Nis N. Wegmann
maintainer:          niswegmann@gmail.com
homepage:            https://github.com/niswegmann/murmur3
extra-source-files:  README.mdgit remote add origin
build-type:          Simple
cabal-version:       >= 1.10
description:         

  MurmurHash is a family of non-cryptographic hash functions suitable for
  general hash-based lookup. This implementation uses MurmurHash3 and
  generates 32-bit hash values.

  The MurmurHash family of hash functions are described at the following
  webpages:

    * <http://code.google.com/p/smhasher/>

    * <http://en.wikipedia.org/wiki/MurmurHash>

  If you need to generate hashes from large pieces of data such as bytestreams
  or if you need a cryptographic hash function this is the wrong package. If
  you need to generate rapid hashes from small pieces of data, e.g. for
  implementing hash-based lookup, this is the right package.

library
  default-language:  Haskell2010
  build-depends:     haskell2010
  ghc-options:       -O2 -Wall -fwarn-tabs
  exposed-modules:   Data.Digest.Murmur
